gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-global-registration.rs
todo!(); // { dg-error "" "" { target *-*-* } }

fn main() {}

